--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title></title>
+    <title>ColorClock - no.good.at.coding</title>
     <link rel="stylesheet" type="text/css" href="colorclockstyle.css" media="screen" title="Default" />
     
     <script type="text/javascript"
