Modified link to project page (via logo) and added version number beginning at 1.0

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             </div>
         </div>
     </div>
-    <div id="credits"><span><span><a href="http://thecolourclock.co.uk/">THE COLOUR CLOCK</a> BY <a href="http://www.lookatjack.com/">Jack.</a></span><span id="port">HTML/JAVASCRIPT VERSION BY <a href="http://nogoodatcoding.com"><img src="ngac.png" alt="no.good.at.coding" title="no.good.at.coding" /></a></span></span></div>
+    <div id="credits"><span><span><a href="http://thecolourclock.co.uk/">THE COLOUR CLOCK</a> BY <a href="http://www.lookatjack.com/">Jack.</a></span><span id="port">HTML/JAVASCRIPT VERSION BY <a target=_blank href="http://nogoodatcoding.com/projects/colorclock"><img src="ngac.png" alt="no.good.at.coding" title="no.good.at.coding" /></a> v1.0</span></span></div>
 </body>
 </html>
