--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
             src="jquery.color.min.js"></script>        
     <script type="text/javascript"
             src="colorclock.min.js"></script>        
+            
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-4578410-5']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
 </head>
 <body>
     <div id="container">
@@ -35,6 +49,6 @@
             </div>
         </div>
     </div>
-    <div id="credits"><span><span><a href="http://thecolourclock.co.uk/">THE COLOUR CLOCK</a> BY <a href="http://www.lookatjack.com/">Jack.</a></span><span id="port">HTML/JAVASCRIPT VERSION BY <a target=_blank href="http://nogoodatcoding.com/projects/colorclock"><img src="ngac.png" alt="no.good.at.coding" title="no.good.at.coding" /></a> v1.0</span></span></div>
+    <div id="credits"><span><span><a href="http://thecolourclock.co.uk/">THE COLOUR CLOCK</a> BY <a href="http://www.lookatjack.com/">Jack Hughes.</a></span><span id="port">JAVASCRIPT VERSION BY <a target=_blank href="http://nogoodatcoding.com/projects/colorclock"><img src="ngac.png" alt="no.good.at.coding" title="no.good.at.coding" /></a> v1.0</span></span></div>
 </body>
 </html>
