Replaced The #am/#pm div for a single #bar div placed between the time/hex val divs.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript"
             src="jquery.color.min.js"></script>        
     <script type="text/javascript"
-            src="colorclock.min.js"></script>        
+            src="colorclock.js"></script>        
             
     <script type="text/javascript">
 
@@ -40,12 +40,12 @@
         </div>
         
         <div id="display">
-            <div id="am"><span class="hr">00:00:00</span></div>
-            <div><span id="timeval"></span></div>
-            <div><span id="hexval"></span></div>
-            <div id="pm"><span class="hr">00:00:00</span></div>
+            <div id="timeval"></div>
+            <div id="bar"><span class="hr">00:00:00</span></div>
+            <div id="hexval"></div>
             <div id="toggle_container">
-                <span class="toggler on" id="toggletime">000.</span><span class="toggler" id="togglehex">000.</span>
+                <span class="toggler on" id="toggletime">&nbsp;</span>
+                <span class="toggler" id="togglehex">&nbsp;</span>
             </div>
         </div>
     </div>
